# xapian-bindings

./: .gitignore  MANIFEST.in  setup.cfg
.github/workflows/: build_wheel.yml  build_xapian.yml  build_xapian_bindings.yml  manylinux.yml  wheel.yml
docker/: Dockerfile  Dockerfile.xapian
scripts/: build_wheel.sh
