[metadata]
name = xapianpy
version = attr: xapian.bindings.__version__
author = Eugen Ciur
author_email = eugen@papermerge.com
description = Meta-package to build and install xapian-bindings extension.
long_description = file: README.md
keywords = xapian, bindings
license = BSD
url = https://github.com/papermerge/xapian-bindings
project_urls =
	Documentation = https://github.com/papermerge/xapian-bindings
	Source = https://github.com/papermerge/xapian-bindings
	Tracker = https://github.com/papermerge/xapian-bindings/issues
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = xapian
include_package_data = True
zip_safe = False
setup_requires = 
	requests
	sphinx

[bdist_wheel]
universal = 0
